Support AST-aware schema universe printing